# HRBot

./: ai.py  config.py  log.py  main.py  pyproject.toml
back/: ai.py  custom_postgres.py  db.py  evaluate_prompt.md  hr_prompt.md  hr_prompt2.md  new_ai.py  start_msg.md
data/: base_requirements.txt  base_resume.txt
templates/: base.html  candidate_detail.html  candidates.html  vacancies.html
