[tool.poetry]
name = "hrbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telebot = "^0.0.5"
python-dotenv = "^1.0.1"
langchain = "^0.3.11"
openai = "^1.57.2"
colorlog = "^6.9.0"
langchain-community = "^0.3.11"
langchain-openai = "^0.2.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
